# 3d-sandbox

./: .gitignore  3d-sandbox.sln  3d-sandbox.vcxproj  3d-sandbox.vcxproj.filters  CMakeLists.txt  Makefile  README.md  build.sh  core-guidelines.ruleset
cmake/: glew.cmake  opengl.cmake  sdl2.cmake
code/: App.cpp  App.h  Camera.cpp  Camera.h  Loader.cpp  Loader.h  OpenGLGeo.cpp  OpenGLGeo.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  grid.h  gsl.hpp  main.cpp  mat4.h  platform.h  vec3.h
shaders/: disolve_fragment.glsl  disolve_vertex.glsl  gooch_fragment.glsl  grid_fragment.glsl  grid_vertex.glsl  oren-nayar_fragment.glsl  oren-nayar_vertex.glsl  text_fragment.glsl  text_vertex.glsl
src/: App.cpp  App.h  Camera.cpp  Camera.h  Grid.cpp  Loader.cpp  OpenGLGeo.cpp  OpenGLGeo.h  Shader.cpp  Shader.h  ShaderManager.h  camera.c  camera.h  grid.cpp  main.cpp  mat4.h  mat4_invertable.h  math.c  obj_parser  obj_parser.c  platform.h  vec4.h
src/algebra/: mat4.h  mat4_invertable.h  vec3.h
